[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/weapon_manager.gd" type="Script" id=1]

[node name="weapon_manager" type="Node2D"]

script = ExtResource( 1 )

[node name="weapon_bottom_front" type="Position2D" parent="." index="0"]

position = Vector2( 48, 0 )
rotation = 0.755711

[node name="weapon_top_front" type="Position2D" parent="." index="1"]

position = Vector2( 48, -64 )
rotation = -0.710152

[node name="weapon_top" type="Position2D" parent="." index="2"]

position = Vector2( 0, -96 )
rotation = -1.5708
_sections_unfolded = [ "Transform" ]

[node name="weapon_front" type="Position2D" parent="." index="3"]

position = Vector2( 64, -32 )

[node name="weapon_bottom" type="Position2D" parent="." index="4"]

position = Vector2( 0, 48 )
rotation = 1.5708
_sections_unfolded = [ "Transform" ]


